--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "ng serve --proxy-config proxy.conf.json -o",
     "build": "ng build",
     "publish": "./publish.sh --publish s3://dush-public/medima-pi/ --name medima-pi-ui",
+    "snapshot": "npm run-script build && ./publish.sh --name medima-pi-ui --snapshot dush@192.168.0.11:~/medima",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
